# Instructions on cross-compiling for armv6: https://github.com/japaric/rust-cross/issues/42
# Also, there are scripts that do the job
[package]
name = "restedpi"
version = "0.1.0"
authors = ["Christopher Lord <christopher@lord.ac>"]
edition = "2018"


[dependencies]
futures = "0.3"
rppal = "0.11.3"
rust-crypto = "^0.2"
warp = { version = "0.2.5", features = ["tls"] }
toml = "0.5.7"
rand = "0.6.0"
mime_guess = "2.0"
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4.19"
dirs = "3.0.1"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bit-array = "0.4.4"
typenum = "1.12"
log = "0.4"
serde_derive = "1.0.101"
pretty_env_logger = "0.3"
rust-embed = "5.6.0"
tokio = { version = "0.2", features = ["macros"] }
bincode = "1.3.1"

