# Instructions on cross-compiling for armv6: https://github.com/japaric/rust-cross/issues/42
# Also, there are scripts that do the job
[package]
name = "restedpi"
version = "0.2.0"
authors = ["Christopher Lord <christopher@lord.ac>"]
edition = "2018"

[features]
raspberrypi = ["rppal"]
mock-gpio = []

[build-dependencies]
cfgrammar = "0.13.4"
lrlex = "0.13.4"
lrpar = "0.13.4"

[lib]
name = "librpi"
path = "src/lib.rs"

[dependencies]
juniper = "0.15.7"
juniper_warp = "0.7.0"
futures = "0.3.16"
rppal = { version = "0.17.1", optional = true } 
structopt = "0.3.22"
prometheus = "0.13.0"
warp = { version = "0.3.1", features = ["tls"] }
toml = "0.8.10"
rand = "0.8.4"
mime_guess = "2.0.3"
regex = "1.5.4"
lazy_static = "1.4.0"
chrono = "0.4.31"
rpassword = "5.0.1"
dirs = "5.0.1"
hex = "0.4.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.65"
rustyline = "8.2.0"
bit-array = "0.4.4"
typenum = "1.13.0"
serde_derive = "1.0.126"
async-recursion = "1.0.5"
diesel = { version = "1.4.7", features = ["chrono", "sqlite", "r2d2"] }
diesel-derive-enum = { version = "1.1.1", features = ["sqlite"] } 
tracing = "0.1.26"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"
rust-embed = "5.9.0"
tokio = { version = "1.9.0", features = ["macros"] }
bincode = "1.3.3"
r2d2 = "0.8.9"
cfgrammar = "0.13.4"
lrlex = "0.13.4"
lrpar = "0.13.4"
color-eyre = "0.6.2"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.8"
hex-literal = "0.4.1"
password-hash = "0.5.0"
argon2 = { version = "0.5.2", features = ["std", "alloc"] }
